// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a list of rules 1`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    <div
      data-testid="button-group"
    >
      <button
        type="button"
      >
        su-plus
      </button>
      <button
        disabled=""
        type="button"
      >
        su-trash-alt
      </button>
    </div>
  </div>
  <div
    data-testid="table"
  >
    <div
      data-testid="table-header"
    >
      <div
        data-testid="table-header-cell"
      >
        sulu_admin.title
      </div>
      <div
        data-testid="table-header-cell"
      >
        sulu_audience_targeting.assigned_at
      </div>
      <div
        data-testid="table-header-cell"
      >
        sulu_audience_targeting.conditions
      </div>
    </div>
    <div
      data-testid="table-body"
    >
      <div
        data-selected="false"
      >
        <div
          data-testid="table-cell"
        >
          Rule 1
        </div>
        <div
          data-testid="table-cell"
        >
          sulu_audience_targeting.each_page_visit
        </div>
        <div
          data-testid="table-cell"
        >
          Browser
        </div>
      </div>
      <div
        data-selected="false"
      >
        <div
          data-testid="table-cell"
        >
          Rule 2
        </div>
        <div
          data-testid="table-cell"
        >
          sulu_audience_targeting.each_session
        </div>
        <div
          data-testid="table-cell"
        >
          Browser & Query String
        </div>
      </div>
      <div
        data-selected="false"
      >
        <div
          data-testid="table-cell"
        >
          Rule 3
        </div>
        <div
          data-testid="table-cell"
        >
          sulu_audience_targeting.first_visit
        </div>
        <div
          data-testid="table-cell"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="rule-overlay-closed"
  />
</DocumentFragment>
`;

exports[`Render an empty list of rules 1`] = `
<DocumentFragment>
  <div
    class="buttons"
  >
    <div
      data-testid="button-group"
    >
      <button
        type="button"
      >
        su-plus
      </button>
      <button
        disabled=""
        type="button"
      >
        su-trash-alt
      </button>
    </div>
  </div>
  <div
    data-testid="table"
  >
    <div
      data-testid="table-header"
    >
      <div
        data-testid="table-header-cell"
      >
        sulu_admin.title
      </div>
      <div
        data-testid="table-header-cell"
      >
        sulu_audience_targeting.assigned_at
      </div>
      <div
        data-testid="table-header-cell"
      >
        sulu_audience_targeting.conditions
      </div>
    </div>
    <div
      data-testid="table-body"
    />
  </div>
  <div
    data-testid="rule-overlay-closed"
  />
</DocumentFragment>
`;
